tests/kiama/negative/type_errors/L4/4_badarray3.ob
MODULE badarray3;

TYPE
    atype3 = ARRAY TRUE OF INTEGER;

END badarray3.
